[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook_extractor_youdant"
version = "0.0.1"
authors = [{ name = "yuda", email = "youdant@gmail.com" }]
description = "A tool to extract code from Jupyter Notebook and generate python script file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yudantoanas/notebook-extractor"
Issues = "https://github.com/yudantoanas/notebook-extractor/issues"
